spec/.test/config/invalid/passes.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
    'passes' => 1,
    'mappers' => [],
];
